Added tap by coordinate
